Bug 150474 - FILEOPEN RTF Hidden line breaks inside table are not hidden
Summary: FILEOPEN RTF Hidden line breaks inside table are not hidden
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2022-08-18 14:49 UTC by Gabor Kelemen (Collabora)
Modified: 2022-09-05 17:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2010 (38.03 KB, application/msword)
2022-08-18 14:49 UTC, Gabor Kelemen (Collabora)
Details
The first example file in current nightly and Word 2010 (171.09 KB, image/png)
2022-08-18 14:50 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-08-18 14:49:15 UTC
Created attachment 181863 [details]
Example file from Word 2010

Attached RTF example file was made in Word 2010 and contains some line breaks and one paragraph break in a table that were set with direct formatting to hidden.

Writer does not import the hidden setting, so the layout of the document is different than in Word.

1, Open attached document
2, Turn off the display of formatting marks (PI)

The table height should be reduced, only two rows of text:
"Maecenas porttitor congue massa."
"a"
should be seen in the B1 cell, like in Word.

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 8475b367298de73aec6abc60a159cc015baf9734
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

This was good in 4.0 and broke sometime before 4.1, broken ever since.
Comment 1 Gabor Kelemen (Collabora) 2022-08-18 14:50:20 UTC
Created attachment 181864 [details]
The first example file in current nightly and Word 2010
Comment 2 Gabor Kelemen (Collabora) 2022-08-18 15:11:58 UTC
How the table content looks with formatting marks hidden: attachment 181866 [details]
Comment 3 Ezinne 2022-08-19 07:15:23 UTC
Reproducible in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a9d225df2f8772e21435523ca20df1ece37390e4
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: pt-BR (en_NG); UI: en-US
Calc: threaded
Comment 4 raal 2022-08-23 15:10:29 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna ; Could you possibly take a look at this one?
Thanks
 f1cea72f507b88157f31461bea8b6605912b35bc is the first bad commit
commit f1cea72f507b88157f31461bea8b6605912b35bc
Author: Matthew Francis <mjay.francis@gmail.com>
Date:   Fri Sep 18 10:15:03 2015 +0800

    source-hash-4a507f732d82c188ad81b022cbe3037951e58ac3
    
    commit 4a507f732d82c188ad81b022cbe3037951e58ac3
    Author:     Miklos Vajna <vmiklos@suse.cz>
    AuthorDate: Mon Dec 24 15:06:15 2012 +0100
    Commit:     Miklos Vajna <vmiklos@suse.cz>
    CommitDate: Mon Dec 24 15:22:55 2012 +0100
    
        fdo#57678 fix import of RTF_PARD between RTF_CELL and RTF_ROW
Comment 5 Commit Notification 2022-09-01 08:39:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a403bcbbe0f45cd14a74ae76c4647096463e8ca

tdf#150474 RTF import: fix missing char props for in-table newline characters

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-09-05 13:55:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/4d0252ad7a7b59b514cd0f514047b9a9538ccf02

tdf#150474 RTF import: fix missing char props for in-table newline characters

It will be available in 7.4.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2022-09-05 17:22:01 UTC
Verified in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: dc92a4d973086ce8a6a5f75ba0f4d4c9ca05537a
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

The hidden character property of the line breaks is imported correctly in the table.