tdf#150474 RTF import: fix missing char props for in-table newline characters

I forgot about this in b9508dd55f82d35f09a58021dc001cf79b390e08
(fdo#50665 rtftok: don't ignore character properties of text fields,
2012-06-06), which handled the plain body text case, but not the
buffered case.

Change-Id: I5c5ebb58becc44a6cf1e0bb8984b2b8c212c3c2b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139143
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins